<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".masstiming.MassTimingActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/material_tool_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/every_sunday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/every_sunday"
        android:textColor="@color/txt_color"
        app:fontFamily="@font/roboto_medium"
        android:background="@color/white_full"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:lineSpacingExtra="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <View
        android:id="@+id/every_sunday_view"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_2sdp"
        app:layout_constraintTop_toBottomOf="@+id/every_sunday"
        android:background="@color/every_sunday"
        android:layout_marginLeft="@dimen/_15sdp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/every_sunday_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:background="@color/white_full"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:text="@string/sunday_time"
        android:textColor="@color/txt_color"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:lineSpacingExtra="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/every_sunday_view"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/every_tues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:paddingTop="@dimen/_25sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:text="@string/every_tuesday"
        android:textColor="@color/txt_color"
        app:fontFamily="@font/roboto_medium"
        android:background="@color/white_full"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:lineSpacingExtra="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/every_sunday_time"/>

    <View
        android:id="@+id/every_tues_view"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_2sdp"
        app:layout_constraintTop_toBottomOf="@+id/every_tues"
        android:background="@color/every_tuesday"
        android:layout_marginLeft="@dimen/_15sdp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tues_adoration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:background="@color/white_full"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:text="@string/tuesday_time_adoration"
        android:textColor="@color/txt_color"
        app:fontFamily="@font/roboto_regular"
        android:lineSpacingExtra="@dimen/_8sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/every_tues_view"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tues_mass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:background="@color/white_full"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:text="@string/tues_mass"
        android:textColor="@color/txt_color"
        app:fontFamily="@font/roboto_regular"
        android:lineSpacingExtra="@dimen/_8sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tues_adoration"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/first_tues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:paddingTop="@dimen/_25sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:text="@string/every_first_tues"
        android:textColor="@color/txt_color"
        app:fontFamily="@font/roboto_medium"
        android:background="@color/white_full"
        android:lineSpacingExtra="@dimen/_8sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tues_mass"/>

    <View
        android:id="@+id/first_tues_view"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_2sdp"
        app:layout_constraintTop_toBottomOf="@+id/first_tues"
        android:background="@color/every_first_tuesday"
        android:layout_marginLeft="@dimen/_15sdp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/first_tues_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:background="@color/white_full"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:text="@string/tuesday_time_adoration"
        android:textColor="@color/txt_color"
        app:fontFamily="@font/roboto_regular"
        android:lineSpacingExtra="@dimen/_8sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_tues_view"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/first_tues_adoration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:background="@color/white_full"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:text="@string/tues_mass"
        android:textColor="@color/txt_color"
        app:fontFamily="@font/roboto_regular"
        android:lineSpacingExtra="@dimen/_8sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_tues_car"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/first_tues_mass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:background="@color/white_full"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:text="@string/every_first_tues_mass"
        android:textColor="@color/txt_color"
        app:fontFamily="@font/roboto_regular"
        android:lineSpacingExtra="@dimen/_8sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_tues_adoration"/>

</androidx.constraintlayout.widget.ConstraintLayout>